1~8호선 html 이미지 업데이트 완료

--- a/mini3/subway/templates/subway/line3.html
+++ b/mini3/subway/templates/subway/line3.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>3호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line3_v3.png' %}" width="70%">
+    <img src="{% static 'subway/line3.png' %}" width="70%">
 </body>
 </html>
