--- a/mini3/subway/templates/subway/line1.html
+++ b/mini3/subway/templates/subway/line1.html
@@ -1,12 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>1호선</title>
-</head>
-<body>
-    <h1>1호선 노선도</h1>
+{% block title %}1호선{% endblock %}
+
+{% block content %}
+    <h1>1호선 렛츠 기릿</h1>
     <img src="{% static 'subway/line1.png' %}" width="70%">
-</body>
-</html>
+{% endblock %}
