--- a/mini3/subway/templates/subway/line5.html
+++ b/mini3/subway/templates/subway/line5.html
@@ -1,12 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>5호선</title>
-</head>
-<body>
+{% block title %}5호선{% endblock %}
+
+{% block content %}
     <h1>5호선 렛츠 기릿</h1>
     <img src="{% static 'subway/line5.png' %}" width="70%">
-</body>
-</html>
+{% endblock %}
