--- a/mini3/subway/templates/subway/line7.html
+++ b/mini3/subway/templates/subway/line7.html
@@ -1,12 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>7호선</title>
-</head>
-<body>
+{% block title %}7호선{% endblock %}
+
+{% block content %}
     <h1>7호선 렛츠 기릿</h1>
     <img src="{% static 'subway/line7.png' %}" width="70%">
-</body>
-</html>
+{% endblock %}
