--- a/subway_project/line3/templates/line3/line3.html
+++ b/subway_project/line3/templates/line3/line3.html
@@ -3,6 +3,7 @@
 {% block title %}1호선{% endblock %}
 
 {% block content %}
-    <h1>3호선 렛츠 기릿</h1>
-    <img src="{% static 'line3/line3.png' %}" width="70%">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'line3/line3.png' %}" alt="3호선 노선도">
+</div>
 {% endblock %}
