--- a/subway_project/line3/templates/base.html
+++ b/subway_project/line3/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}기본 타이틀{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'line3/style.css' %}">
+    <link rel="stylesheet" type="text/css">
     <style>
         @font-face {
             font-family: 'BMJUA';
@@ -21,6 +21,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-bottom: 5px;
             background-color: rgb(255, 226, 236);
         }
         .header img {
@@ -46,16 +47,17 @@
         .image-container {
             width: 100%;
             height: 80vh;
-            overflow: scroll;
+            overflow: hidden;
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
+            
         }
         .map-image {
             max-width: none;
             height: auto;
-            width: 50%;
+            width: 130%;
             transition: width 0.5s, transform 0.5s;
             position: absolute;
             top: 50%;
@@ -75,23 +77,23 @@
     </header>
     <div style="text-align: center;">
         <nav>
-            <a href="{% url 'line3:1호선' %}"><img src="{% static 'line3/1.png' %}" width="50"></a>
-            <a href="{% url 'line3:2호선' %}"><img src="{% static 'line3/2.png' %}" width="50"></a>
-            <a href="{% url 'line3:3호선' %}"><img src="{% static 'line3/3.png' %}" width="50"></a>
-            <a href="{% url 'line3:4호선' %}"><img src="{% static 'line3/4.png' %}" width="50"></a>
-            <a href="{% url 'line3:5호선' %}"><img src="{% static 'line3/5.png' %}" width="50"></a>
-            <a href="{% url 'line3:6호선' %}"><img src="{% static 'line3/6.png' %}" width="50"></a>
-            <a href="{% url 'line3:7호선' %}"><img src="{% static 'line3/7.png' %}" width="50"></a>
-            <a href="{% url 'line3:8호선' %}"><img src="{% static 'line3/8.png' %}" width="50"></a>
+            <a href="{% url 'line3:1호선' %}"><img src="{% static 'line3/1.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:2호선' %}"><img src="{% static 'line3/2.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:3호선' %}"><img src="{% static 'line3/3.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:4호선' %}"><img src="{% static 'line3/4.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:5호선' %}"><img src="{% static 'line3/5.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:6호선' %}"><img src="{% static 'line3/6.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:7호선' %}"><img src="{% static 'line3/7.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:8호선' %}"><img src="{% static 'line3/8.png' %}" style="width: 50px; margin: 10px"></a>
         </nav>
     </div>
     <main>
         {% block content %}
         {% endblock %}
     </main>
-    <div class="controls">
-        <button onclick="resizeImage('larger')">확대</button>
-        <button onclick="resizeImage('smaller')">축소</button>
+    <div class="controls" style="margin-top: 200px; margin-right: 20px;">
+        <img src="{% static 'line3/zoomin.png' %}" onclick="resizeImage('larger')" style="width: 35px; margin: 5px;">
+        <img src="{% static 'line3/zoomout.png' %}" onclick="resizeImage('smaller')" style="width: 35px; margin: 5px;">
     </div>
     <script>
         function resizeImage(action) {
@@ -100,7 +102,7 @@
             if (action === 'larger') {
                 currentWidth = Math.min(currentWidth + 20, 200);
             } else if (action === 'smaller') {
-                currentWidth = Math.max(currentWidth - 20, 50);
+                currentWidth = Math.max(currentWidth - 20, 120);
             }
             img.style.width = currentWidth + '%';
             img.style.top = '50%';
