배너 제작 및 가운데 정렬, 시은 언니 확대/축소랑 합치기 전

--- a/mini3/subway/templates/subway/line5.html
+++ b/mini3/subway/templates/subway/line5.html
@@ -3,6 +3,5 @@
 {% block title %}5호선{% endblock %}
 
 {% block content %}
-    <h1>5호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line5.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line5.png' %}" width="70%">
 {% endblock %}
