--- a/mini3/subway/templates/subway/line8.html
+++ b/mini3/subway/templates/subway/line8.html
@@ -3,6 +3,5 @@
 {% block title %}8호선{% endblock %}
 
 {% block content %}
-    <h1>8호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line8.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line8.png' %}" width="70%">
 {% endblock %}
