--- a/mini3/subway/templates/subway/line1.html
+++ b/mini3/subway/templates/subway/line1.html
@@ -3,6 +3,5 @@
 {% block title %}1호선{% endblock %}
 
 {% block content %}
-    <h1>1호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line1.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line1.png' %}" width="70%">
 {% endblock %}
