--- a/mini3/subway/templates/subway/line2.html
+++ b/mini3/subway/templates/subway/line2.html
@@ -3,6 +3,5 @@
 {% block title %}2호선{% endblock %}
 
 {% block content %}
-    <h1>2호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line2.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line2.png' %}" width="70%">
 {% endblock %}
