--- a/mini3/subway/templates/subway/line3.html
+++ b/mini3/subway/templates/subway/line3.html
@@ -3,6 +3,5 @@
 {% block title %}3호선{% endblock %}
 
 {% block content %}
-    <h1>3호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line3.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line3.png' %}" width="70%">
 {% endblock %}
