--- a/mini3/subway/templates/subway/line4.html
+++ b/mini3/subway/templates/subway/line4.html
@@ -3,6 +3,5 @@
 {% block title %}4호선{% endblock %}
 
 {% block content %}
-    <h1>4호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line4.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line4.png' %}" style="width: 75%;">
 {% endblock %}
