--- a/mini3/subway/templates/subway/line6.html
+++ b/mini3/subway/templates/subway/line6.html
@@ -3,6 +3,5 @@
 {% block title %}6호선{% endblock %}
 
 {% block content %}
-    <h1>6호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line6.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line6.png' %}" width="70%">
 {% endblock %}
