--- a/mini3/subway/templates/subway/line7.html
+++ b/mini3/subway/templates/subway/line7.html
@@ -3,6 +3,5 @@
 {% block title %}7호선{% endblock %}
 
 {% block content %}
-    <h1>7호선 렛츠 기릿</h1>
-    <img src="{% static 'subway/line7.png' %}" width="70%">
+    <img src="{% static 'subway/lines/line7.png' %}" style="width: 70%;">
 {% endblock %}
