시은언니랑 합치기 전 마지막 커밋

--- a/mini3/subway/templates/base.html
+++ b/mini3/subway/templates/base.html
@@ -53,8 +53,8 @@
     <main>
         {% block content %}
         {% endblock %}
-        <div style="float:left;">
-            <img src="{% static 'subway/zoomin.png' %}" style="width: 15px;"><br><img src="{% static 'subway/zoomout.png' %}" style="width: 15px;">
+        <div style="float:right;">
+            <img src="{% static 'subway/zoomin.png' %}" style="width: 20px;"><br><img src="{% static 'subway/zoomout.png' %}" style="width: 20px;">
         </div>
     </main>
 </body>
