--- a/mini3/subway/templates/subway/line1.html
+++ b/mini3/subway/templates/subway/line1.html
@@ -3,5 +3,7 @@
 {% block title %}1호선{% endblock %}
 
 {% block content %}
+<div style="text-align: center;">
     <img src="{% static 'subway/lines/line1.png' %}" width="70%">
+</div>
 {% endblock %}
