시은언니랑 합친 후/확대축소 버튼, 드래그

--- a/mini3/subway/templates/subway/line1.html
+++ b/mini3/subway/templates/subway/line1.html
@@ -3,7 +3,7 @@
 {% block title %}1호선{% endblock %}
 
 {% block content %}
-<div style="text-align: center;">
-    <img src="{% static 'subway/lines/line1.png' %}" width="70%">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'subway/lines/line1.png' %}" alt="1호선 노선도">
 </div>
 {% endblock %}
