--- a/mini3/subway/templates/subway/line3.html
+++ b/mini3/subway/templates/subway/line3.html
@@ -3,5 +3,7 @@
 {% block title %}3호선{% endblock %}
 
 {% block content %}
-    <img src="{% static 'subway/lines/line3.png' %}" width="70%">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'subway/lines/line3.png' %}">
+</div>
 {% endblock %}
