--- a/mini3/subway/templates/subway/line4.html
+++ b/mini3/subway/templates/subway/line4.html
@@ -3,5 +3,7 @@
 {% block title %}4호선{% endblock %}
 
 {% block content %}
-    <img src="{% static 'subway/lines/line4.png' %}" style="width: 75%;">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'subway/lines/line4.png' %}">
+</div>
 {% endblock %}
