--- a/mini3/subway/templates/subway/line7.html
+++ b/mini3/subway/templates/subway/line7.html
@@ -3,5 +3,7 @@
 {% block title %}7호선{% endblock %}
 
 {% block content %}
-    <img src="{% static 'subway/lines/line7.png' %}" style="width: 70%;">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'subway/lines/line7.png' %}">
+</div>
 {% endblock %}
