--- a/mini3/subway/templates/base.html
+++ b/mini3/subway/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}기본 타이틀{% endblock %}</title>
+    <link rel="stylesheet" type="text/css">
     <style>
         @font-face {
             font-family: 'BMJUA';
@@ -20,6 +21,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-bottom: 5px;
             background-color: rgb(255, 226, 236);
         }
         .header img {
@@ -28,34 +30,126 @@
         .header span {
             margin: 0 10px;
         }
-        
+        .controls {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+        }
+        button {
+            font-size: 20px;
+            padding: 10px 20px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .image-container {
+            width: 100%;
+            height: 80vh;
+            overflow: hidden;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        .map-image {
+            max-width: none;
+            height: auto;
+            width: 130%;
+            transition: width 0.5s, transform 0.5s;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            overflow: auto;
+        }
     </style>
-    <header class="header">
-        <h1><img src="{% static 'subway/루피left.png' %}" alt="루피 left" style="width: 30px;">
-        <span>당당루피즈 지하철 노선도</span>
-        <img src="{% static 'subway/루피right.png' %}" alt="루피 right" style="width: 30px;"></h1>
-    </header>
-</body>
+</head>
 <body>
+    <header class="header">
+        <h1>
+            <img src="{% static 'subway/루피left.png' %}" alt="루피 left" style="width: 30px;">
+            <span>당당루피즈 지하철 노선도</span>
+            <img src="{% static 'subway/루피right.png' %}" alt="루피 right" style="width: 30px;">
+        </h1>
+    </header>
     <div style="text-align: center;">
-        <nav style="display: inline-block;"> 
-            <a href="{% url 'subway:1호선' %}"><img src="{% static 'subway/1.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:2호선' %}"><img src="{% static 'subway/2.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:3호선' %}"><img src="{% static 'subway/3.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:4호선' %}"><img src="{% static 'subway/4.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:5호선' %}"><img src="{% static 'subway/5.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:6호선' %}"><img src="{% static 'subway/6.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:7호선' %}"><img src="{% static 'subway/7.png' %}" style="width: 50px; margin: 10px;"></a>
-            <a href="{% url 'subway:8호선' %}"><img src="{% static 'subway/8.png' %}" style="width: 50px; margin: 10px;"></a>
+        <nav>
+            <a href="{% url 'subway:1호선' %}"><img src="{% static 'subway/1.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:2호선' %}"><img src="{% static 'subway/2.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:3호선' %}"><img src="{% static 'subway/3.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:4호선' %}"><img src="{% static 'subway/4.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:5호선' %}"><img src="{% static 'subway/5.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:6호선' %}"><img src="{% static 'subway/6.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:7호선' %}"><img src="{% static 'subway/7.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'subway:8호선' %}"><img src="{% static 'subway/8.png' %}" style="width: 50px; margin: 10px"></a>
         </nav>
-
     </div>
     <main>
         {% block content %}
         {% endblock %}
-        <div style="float:right;">
-            <img src="{% static 'subway/zoomin.png' %}" style="width: 20px;"><br><img src="{% static 'subway/zoomout.png' %}" style="width: 20px;">
-        </div>
     </main>
+    <div class="controls" style="margin-top: 200px; margin-right: 20px;">
+        <img src="{% static 'subway/zoomin.png' %}" onclick="resizeImage('larger')" style="width: 35px; margin: 5px;">
+        <img src="{% static 'subway/zoomout.png' %}" onclick="resizeImage('smaller')" style="width: 35px; margin: 5px;">
+    </div>
+    <script>
+        function resizeImage(action) {
+            const img = document.querySelector('.map-image');
+            let currentWidth = img.style.width ? parseInt(img.style.width) : 50;
+            if (action === 'larger') {
+                currentWidth = Math.min(currentWidth + 20, 200);
+            } else if (action === 'smaller') {
+                currentWidth = Math.max(currentWidth - 20, 120);
+            }
+            img.style.width = currentWidth + '%';
+            img.style.top = '50%';
+            img.style.left = '50%';
+            img.style.transform = 'translate(-50%, -50%)';
+        }
+
+        document.querySelector('.image-container').addEventListener('wheel', function(event) {
+            event.preventDefault();
+            if (event.deltaY < 0) {
+                resizeImage('larger');
+            } else {
+                resizeImage('smaller');
+            }
+        });
+
+        let isDragging = false;
+        let startX, startY, imgStartX, imgStartY;
+
+        const container = document.querySelector('.image-container');
+        const img = document.querySelector('.map-image');
+
+        container.addEventListener('mousedown', (e) => {
+            isDragging = true;
+            startX = e.clientX;
+            startY = e.clientY;
+            imgStartX = img.offsetLeft;
+            imgStartY = img.offsetTop;
+        });
+
+        document.addEventListener('mousemove', (e) => {
+            if (isDragging){
+                e.preventDefault();
+                const dx = (e.clientX - startX) * 1.5;
+                const dy = (e.clientY - startY) * 1.5;
+                img.style.left = `${imgStartX + dx}px`;
+                img.style.top = `${imgStartY + dy}px`;
+            }
+        });
+
+        document.addEventListener('mouseup', () => {
+            isDragging = false;
+        });
+
+        document.addEventListener('mouseleave', () => {
+            isDragging = false;
+        });
+    </script>
 </body>
 </html>
