--- a/mini3/subway/templates/subway/line6.html
+++ b/mini3/subway/templates/subway/line6.html
@@ -3,5 +3,7 @@
 {% block title %}6호선{% endblock %}
 
 {% block content %}
-    <img src="{% static 'subway/lines/line6.png' %}" width="70%">
+<div class="image-container" id="image-container">
+    <img class="map-image" src="{% static 'subway/lines/line6.png' %}">
+</div>
 {% endblock %}
