--- a/subway_project/line3/templates/base.html
+++ b/subway_project/line3/templates/base.html
@@ -52,18 +52,26 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            
         }
         .map-image {
+            display: block;
             max-width: none;
             height: auto;
-            width: 130%;
+            width: 120%;
             transition: width 0.5s, transform 0.5s;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            overflow: auto;
+            transform-origin: center center;
+        }
+        .train-marker {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background: url('{% static "line3/line3_down_default.png" %}') no-repeat center center;
+            background-size: contain;
+            z-index: 1000;
         }
     </style>
 </head>
@@ -75,16 +83,16 @@
             <img src="{% static 'line3/루피right.png' %}" alt="루피 right" style="width: 30px;">
         </h1>
     </header>
-    <div style="text-align: center;">
+    <div style="text-align: center; background-color: rgb(240, 243, 247);">
         <nav>
-            <a href="{% url 'line3:1호선' %}"><img src="{% static 'line3/1.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:2호선' %}"><img src="{% static 'line3/2.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:3호선' %}"><img src="{% static 'line3/3.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:4호선' %}"><img src="{% static 'line3/4.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:5호선' %}"><img src="{% static 'line3/5.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:6호선' %}"><img src="{% static 'line3/6.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:7호선' %}"><img src="{% static 'line3/7.png' %}" style="width: 50px; margin: 10px"></a>
-            <a href="{% url 'line3:8호선' %}"><img src="{% static 'line3/8.png' %}" style="width: 50px; margin: 10px"></a>
+            <a href="{% url 'line3:1호선' %}"><img src="{% static 'line3/1.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:2호선' %}"><img src="{% static 'line3/2.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:3호선' %}"><img src="{% static 'line3/3.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:4호선' %}"><img src="{% static 'line3/4.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:5호선' %}"><img src="{% static 'line3/5.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:6호선' %}"><img src="{% static 'line3/6.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:7호선' %}"><img src="{% static 'line3/7.png' %}" style="width: 50px; margin: 10px;"></a>
+            <a href="{% url 'line3:8호선' %}"><img src="{% static 'line3/8.png' %}" style="width: 50px; margin: 10px;"></a>
         </nav>
     </div>
     <main>
@@ -95,61 +103,7 @@
         <img src="{% static 'line3/zoomin.png' %}" onclick="resizeImage('larger')" style="width: 35px; margin: 5px;">
         <img src="{% static 'line3/zoomout.png' %}" onclick="resizeImage('smaller')" style="width: 35px; margin: 5px;">
     </div>
-    <script>
-        function resizeImage(action) {
-            const img = document.querySelector('.map-image');
-            let currentWidth = img.style.width ? parseInt(img.style.width) : 50;
-            if (action === 'larger') {
-                currentWidth = Math.min(currentWidth + 20, 200);
-            } else if (action === 'smaller') {
-                currentWidth = Math.max(currentWidth - 20, 120);
-            }
-            img.style.width = currentWidth + '%';
-            img.style.top = '50%';
-            img.style.left = '50%';
-            img.style.transform = 'translate(-50%, -50%)';
-        }
-
-        document.querySelector('.image-container').addEventListener('wheel', function(event) {
-            event.preventDefault();
-            if (event.deltaY < 0) {
-                resizeImage('larger');
-            } else {
-                resizeImage('smaller');
-            }
-        });
-
-        let isDragging = false;
-        let startX, startY, imgStartX, imgStartY;
-
-        const container = document.querySelector('.image-container');
-        const img = document.querySelector('.map-image');
-
-        container.addEventListener('mousedown', (e) => {
-            isDragging = true;
-            startX = e.clientX;
-            startY = e.clientY;
-            imgStartX = img.offsetLeft;
-            imgStartY = img.offsetTop;
-        });
-
-        document.addEventListener('mousemove', (e) => {
-            if (isDragging){
-                e.preventDefault();
-                const dx = (e.clientX - startX) * 1.5;
-                const dy = (e.clientY - startY) * 1.5;
-                img.style.left = `${imgStartX + dx}px`;
-                img.style.top = `${imgStartY + dy}px`;
-            }
-        });
-
-        document.addEventListener('mouseup', () => {
-            isDragging = false;
-        });
-
-        document.addEventListener('mouseleave', () => {
-            isDragging = false;
-        });
-    </script>
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
